--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "gmopg": "^6.0.0",
     "moment": "^2.30.1",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
@@ -38,6 +39,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pm2": "^5.4.3",
+    "stripe": "^18.2.1",
     "underscore": "^1.13.7",
     "uuid": "^11.0.5"
   }
