--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pm2": "^5.4.3",
+    "short-unique-id": "^5.3.2",
     "stripe": "^18.2.1",
     "underscore": "^1.13.7",
     "uuid": "^11.0.5"
